k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: oban-eats
  labels:
    app: oban-eats
